--- a/Notification-Swift/Notification/Info.plist
+++ b/Notification-Swift/Notification/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>Sensoro.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.sensoro.$(PRODUCT_NAME:rfc1034identifier)-Swift</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -22,10 +22,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>location</string>
-	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>本软件需要授权使用位置服务，以发现周围的beacon</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -40,7 +38,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>本软件需要授权使用位置服务，以发现周围的beacon</string>
 </dict>
 </plist>
