--- a/Notification-Swift/Notification/Info.plist
+++ b/Notification-Swift/Notification/Info.plist
@@ -4,10 +4,12 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>Notify_Swift</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.sensoro.$(PRODUCT_NAME:rfc1034identifier)-Swift</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -18,13 +20,13 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleDisplayName</key>
-	<string>Notify_Swift</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
+	<string>本软件需要授权使用位置服务，以发现周围的beacon</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>本软件需要授权使用位置服务，以发现周围的beacon</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
